--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,13 @@
       <include src="./partials/hero/hero.html"></include>
     </main>
     <include src="./partials/about/about.html"></include>
+    <include src="./partials/gallery/gallery.html"></include>
     <include src="./partials/backdrop/backdrop.html"></include>
  
     <script src="./js/menu-mobile.js"></script>
     <script src="./js/scroll-header.js"></script>
     <script src="./js/about-items.js"></script>
+    <script type="module" src="./js/gallary.js"></script>
     <script src="./js/backdrop.js"></script>
   </body>
 </html>
