--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/index.scss" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"/>
     <script type="module" src="./index.js"></script>
   </head>
   <body>
@@ -19,11 +23,15 @@
     <include src="./partials/about/about.html"></include>
     <include src="./partials/gallery/gallery.html"></include>
     <include src="./partials/backdrop/backdrop.html"></include>
- 
+
     <script src="./js/menu-mobile.js"></script>
     <script src="./js/scroll-header.js"></script>
     <script src="./js/about-items.js"></script>
     <script type="module" src="./js/gallary.js"></script>
     <script src="./js/backdrop.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+
   </body>
 </html>
