--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
     </main>
     <include src="./partials/about/about.html"></include>
     <include src="./partials/gallery/gallery.html"></include>
+    <include src="./partials/contacts/contacts.html"></include>
+    <include src="./partials/footer/footer.html"></include>
     <include src="./partials/backdrop/backdrop.html"></include>
 
     <script src="./js/menu-mobile.js"></script>
@@ -32,6 +34,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
-
+    
   </body>
 </html>
