--- a/src/index.html
+++ b/src/index.html
@@ -19,21 +19,23 @@
     <include src="./partials/header/header.html"></include>
     <main>
       <include src="./partials/hero/hero.html"></include>
-    </main>
+  
     <include src="./partials/about/about.html"></include>
     <include src="./partials/gallery/gallery.html"></include>
-    <include src="./partials/contacts/contacts.html"></include>
+     <include src="./partials/contacts/contacts.html"></include>
     <include src="./partials/footer/footer.html"></include>
     <include src="./partials/backdrop/backdrop.html"></include>
-
+  </main>
     <script src="./js/menu-mobile.js"></script>
     <script src="./js/scroll-header.js"></script>
     <script src="./js/about-items.js"></script>
     <script type="module" src="./js/gallary.js"></script>
     <script src="./js/backdrop.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/src/js.cookie.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
-    
+   
+
   </body>
 </html>
