--- a/src/index.html
+++ b/src/index.html
@@ -25,15 +25,28 @@
       <include src="./partials/footer/footer.html"></include>
       <include src="./partials/up/up.html"></include>
   </main>
-    <script src="./js/menu-mobile.js"></script>
-    <script src="./js/scroll-header.js"></script>
-    <script src="./js/about-items.js"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+
+
+    <script type="module" src="./js/menu-mobile.js"></script>
+    <script type="module" src="./js/scroll-header.js"></script>
+    <script type="module" src="./js/about-items.js"></script>
     <script type="module" src="./js/gallary.js"></script>
-    <script src="./js/up.js"></script>
-    <script src="./js/hero-modal.js"></script>
+    <script type="module" src="./js/up.js"></script>
+   
+    <script type="module" src="./js/hero-modal.js"></script>
+    <!-- <script type="module" src="./js/validation.js"></script> -->
+
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+
+
+
   </body>
 </html>
