--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,10 +26,8 @@
       <include src="./partials/up/up.html"></include>
   </main>
 
-
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 
 
     <script type="module" src="./js/menu-mobile.js"></script>
@@ -39,7 +37,6 @@
     <script type="module" src="./js/up.js"></script>
    
     <script type="module" src="./js/hero-modal.js"></script>
-    <!-- <script type="module" src="./js/validation.js"></script> -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
