--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
 
     <script type="module" src="./js/menu-mobile.js"></script>
     <script type="module" src="./js/scroll-header.js"></script>
